# QAChatAgent

./: .env  .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  WARP.md  environment.yml  install_tesseract_windows.md  pdf_to_markdown.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.ps1  载入 PDF 并进行元素提取.ipynb  阶段性总结提示词.md
backend/: .env.example  .gitignore  README.md  environment.yml  log  main.py  pdf_to_markdown.py  requirements.txt
backend/utils/: _config.py  chroma_store.py  database.py  database_chat.py  database_knowledge.py  document_loader.py  embeding.py  logger.py  pdf_to_markdown.py  rag_chat.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/assets/: element-theme.scss  theme.css
frontend/src/components/: FilePreview.vue  GlobalPreview.vue  KnowledgeManagement.vue
frontend/src/components/layout/: MainLayout copy.vue  MainLayout.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: chat.js  knowledge.js
frontend/src/views/chat/: ChatView.vue
frontend/src/views/knowledge/: KnowledgeView.vue
tmp/: README.md  pyproject.toml  setup.py  载入_PDF_并进行元素提取_修复版.ipynb
venv-py311/: pyvenv.cfg
venv-py311/Scripts/: activate  activate.bat  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py  pygrun  runxlrd.py  vba_extract.py
